v4s4j廃止、java apiを利用、websocket対応、その他バグ修正